fix: add Hibernate dialect for PostgreSQL and implement custom scrollbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,25 @@ body{
   background-color: #121212;
   color: white;
 }
+  .custom-scrollbar {
+    scrollbar-width: thin; 
+    scrollbar-color: #4B5563 #E5E7EB; 
+  }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #E5E7EB;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #4B5563;
+    border-radius: 4px;
+    border: 2px solid #E5E7EB; /* gives spacing effect */
+  }
 .nav_bar .login{
   background: rgba(255, 255, 255, 0.1); 
   backdrop-filter: blur(10px);
